[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }
bacon = "2.2.5"
reqwest = "0.11.12"
ron = "0.8.0"
egui = "0.19.0"
eframe = "0.19.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }